--- a/profile-app/package.json
+++ b/profile-app/package.json
@@ -2,7 +2,7 @@
   "name": "profile-app",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:5000",
+  "proxy":"https://profile-app-fullstack.herokuapp.com",
   "secure":false,
   "homepage":"/",
   "dependencies": {
