--- a/profile-app/package.json
+++ b/profile-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "proxy":"https://profile-app-fullstack.herokuapp.com",
-  "secure":false,
+  "secure":true,
   "homepage":"/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
